build_err2.txt
C:\Users\Lenovo\.cargo\bin\cargo.exe :     Ch
ecking privacy-proxy v1.0.0 (D:\Loyihalar\Rus
t-app)
строка:1 знак:1
+ C:\Users\Lenovo\.cargo\bin\cargo.exe check 
--color never 2> build_err ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:  
   (    Checking pr...halar\Rust-app):Strin  
  g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE 
   rror
 
error[E0432]: unresolved import `rcgen::Defau
ltKeyGeneration`
 --> src\mitm.rs:1:54
  |
1 | use rcgen::{CertificateParams, KeyPair, C
ertificate, DefaultKeyGeneration};
  |                                          
            ^^^^^^^^^^^^^^^^^^^^ no `DefaultK
eyGeneration` in the root

error[E0432]: unresolved import `rustls_pki_t
ypes`
 --> src\mitm.rs:4:5
  |
4 | use rustls_pki_types::{CertificateDer, Pr
ivateKeyDer};
  |     ^^^^^^^^^^^^^^^^ use of unresolved mo
dule or unlinked crate `rustls_pki_types`
  |
  = help: if you wanted to use a crate named 
`rustls_pki_types`, use `cargo add rustls_pki
_types` to add it to your `Cargo.toml`

warning: unused import: `crate::detector::Det
ectionType`
 --> src\gui.rs:5:5
  |
5 | use crate::detector::DetectionType;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0277]: the `?` operator can only be ap
plied to values that implement `Try`
  --> src\mitm.rs:72:26
   |
72 |         let mut params = CertificatePara
ms::new(vec![domain.to_string()])?;
   |                          ^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` op
erator cannot be applied to type `Certificate
Params`
   |
   = help: the nightly-only, unstable trait `
Try` is not implemented for `CertificateParam
s`

error[E0599]: no function or associated item 
named `from_ca_cert_pem` found for struct `Ce
rtificateParams` in the current scope
    --> src\mitm.rs:32:45
     |
  32 |             let params = CertificatePa
rams::from_ca_cert_pem(&cert_pem).unwrap();
     |                                       
      ^^^^^^^^^^^^^^^^ function or associated
 item not found in `CertificateParams`
     |
note: if you're trying to build a new `Certif
icateParams`, consider using `CertificatePara
ms::new` which returns `CertificateParams`
    --> C:\Users\Lenovo\.cargo\registry\src\i
ndex.crates.io-1949cf8c6b5b557f\rcgen-0.11.3\
src\lib.rs:1223:2
     |
1223 |     pub fn new(subject_alt_names: impl
 Into<Vec<String>>) -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\state.rs:58:13
   |
58 |         let mut sysproxy = sysproxy::Sys
proxy {
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[
warn(unused)]`) on by default

Some errors have detailed explanations: E0277
, E0432, E0599.
For more information about an error, try `rus
tc --explain E0277`.
warning: `privacy-proxy` (bin "privacy-proxy"
) generated 2 warnings
error: could not compile `privacy-proxy` (bin
 "privacy-proxy") due to 4 previous errors; 2
 warnings emitted
